--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,8 @@
 }
 
 body {
-  min-height: 100vh;
+  padding-top: 70px;
+  min-height: calc(100vh - 70px);
   background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
