--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -158,10 +158,19 @@ form .custom-input{
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+}
+
+.custom-file-upload span{
   text-align: center;
   font-size: 16px;
   font-family: Inter-Bold;
-  overflow: hidden;
+}
+
+.custom-file-upload-pre-image span{
+  text-align: center;
+  font-size: 24px;
+  font-family: Inter-Bold;
 }
 
 .custom-file-upload-pre-image img:not(.custom-file-upload-placeholder){
@@ -209,6 +218,14 @@ form button{
   font-size: 14px;
   border-radius: 5px;
   text-wrap: wrap;
+}
+
+.auth-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .noselect {
